--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 THEME=https://raw.githubusercontent.com/seanwcom/Red-Graphite-for-Obsidian/master/obsidian.css
 BASE_THEME=light
+dgHomeLink=true
+dgPassFrontmatter=false
