--- a/.env
+++ b/.env
@@ -1,4 +1,15 @@
 THEME=https://raw.githubusercontent.com/seanwcom/Red-Graphite-for-Obsidian/master/obsidian.css
 BASE_THEME=light
+SITE_NAME_HEADER=Wouter Tavernier
+SITE_BASE_URL=woutertavernier.netlify.app
+SHOW_CREATED_TIMESTAMP=false
+TIMESTAMP_FORMAT=MMM dd, yyyy h:mm a
+SHOW_UPDATED_TIMESTAMP=false
+NOTE_ICON_DEFAULT=
+NOTE_ICON_TITLE=false
+NOTE_ICON_FILETREE=false
+NOTE_ICON_INTERNAL_LINKS=false
+NOTE_ICON_BACK_LINKS=false
+STYLE_SETTINGS_CSS=""
 dgHomeLink=true
 dgPassFrontmatter=false
