--- a/.env
+++ b/.env
@@ -5,7 +5,7 @@ SITE_BASE_URL=woutertavernier.netlify.app
 SHOW_CREATED_TIMESTAMP=false
 TIMESTAMP_FORMAT=MMM dd, yyyy h:mm a
 SHOW_UPDATED_TIMESTAMP=false
-NOTE_ICON_DEFAULT=
+NOTE_ICON_DEFAULT=attachments/personal-web-favicon.svg
 NOTE_ICON_TITLE=false
 NOTE_ICON_FILETREE=false
 NOTE_ICON_INTERNAL_LINKS=false
